# ai_architect_rag_srt

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  router.py
evaluation/: evaltest.py  tests.jsonl
implementation/: answer.py  dialapitest.py  ingest.py
views/: chatview.py  evaluationview.py  ingestview.py
